kasm/security-group/kasm_sg.tf
# security-group/main.tf

# create Security Group for Kasm EC2 instances
resource "aws_security_group" "kasm_sg" {
  name_prefix = "kasm_sg_"

  tags = {
    Name   = "kasm_sg"
  }

  # incoming network traffic rules
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH traffic"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP traffic"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTPS traffic"
  }

  # outbound network traffic rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound traffic"
  }
}

# Output variable to expose the security group ID
output "kasm_sg_id" {
  value = aws_security_group.kasm_sg.id
}
